hphp/hack/test/typecheck/array/safe_vector_array/disallows_array_of_int_when_array_of_tk_to_tv_is_required.php
<?hh // partial

function consumeArrayOfTkToTv<Tk, Tv>(array<Tk, Tv> $_): void {}

function test(array<int> $arrayOfInt): void {
  consumeArrayOfTkToTv($arrayOfInt);
}
